# fatbinary

./: .gitignore  Cargo.toml  LICENSE  README.md  fatbinary.ksy
.github/workflows/: rust.yml
fatbinary/: Cargo.toml  README.md
fatbinary/src/: lib.rs
fatbinary/tests/: axpy.cu
nvfatbin-rs/: Cargo.toml  README.md  build.rs
nvfatbin-rs/src/: lib.rs
src/: lib.rs
tests/: .gitignore  build.sh
