[package]
name = "fatbinary"
version = "0.2.0"
edition = "2021"
description = "Rust library to manipulate CUDA fatbinary format"
license = "MIT"
homepage = "https://github.com/jiegec/fatbinary"
repository = "https://github.com/jiegec/fatbinary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
binread = "2.2.0"
clap = { version = "4.4.6", features = ["derive"] }
thiserror = "2.0.17"

[dev-dependencies]
nvfatbin-rs = { path = "../nvfatbin-rs" }
