[package]
name = "nvfatbin-rs"
version = "0.1.0"
edition = "2021"
description = "Rust bindings to nvFatbin library"
license = "MIT"
homepage = "https://github.com/jiegec/fatbinary"
repository = "https://github.com/jiegec/fatbinary"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
thiserror = "2.0"

[build-dependencies]
bindgen = "0.72"
